# django-admin-dashboard

./: README.md  pyproject.toml  setup.py
django_daisy/: module_settings.py
django_daisy/locale/fa/LC_MESSAGES/: django.po
django_daisy/templates/admin/: base.html  change_list_results.html  login.html
django_daisy/templates/admin/parts/: breadcrumb.html  navbar.html  sidebar.html
django_daisy/templates/admin/registration/: logged_out.html
django_daisy/templates/registration/: logged_out.html
