[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-dashboard"
description = "Admin dashboard template"
authors = [
    { name="Nicholas.Gorlewski", email="nicholas.gorlewski@teknikoyazilimcozumleri.com" }
]
license = { text = "Proprietary" }
dependencies = [
    "Django>=5.0",
]
keywords = ["django", "admin", "dashboard", "daisyui", "tailwindcss"]
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Proprietary Software License",
    "Operating System :: OS Independent"
]

# Declare fields that are dynamically set
dynamic = ["version"]

[tool.setuptools]
packages = ["django_daisy"]

[tool.setuptools_scm]
version_file = "django_daisy/_version.py"